welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: type Bolean
	var vert:Bolean=false
                 ^SlugTracking:5: error: type green is not a member of object java.awt.Color
	if (getColorSol():Color.green) {
                                ^SlugTracking:5: error: not found: value getColorSol
	if (getColorSol():Color.green) {
            ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
	return 
        ^